Added parameter to enable heading from GPS tracking at user's discretion

--- a/src/Settings/AutoConnect.SettingsGroup.json
+++ b/src/Settings/AutoConnect.SettingsGroup.json
@@ -89,6 +89,13 @@
     "shortDesc": "Udp port to receive NMEA streams",
     "type":             "uint32",
     "default":     14401
+},
+{
+    "name":             "nmeaTrustHeading",
+    "shortDesc": "Extract heading from NMEA messages",
+    "longDesc":  "Extract heading from NMEA messages, this will extract heading from $RMC track",
+    "type":             "bool",
+    "default":     false
 }
 ]
 }
